BUG FIX modal on small screens

--- a/src/styles/auth-modal.scss
+++ b/src/styles/auth-modal.scss
@@ -1,17 +1,17 @@
 @import "./constants";
 
 .auth-modal-close {
-    width:40px;
-    height:40px;
-    text-align:center;
-    line-height:35px;
-    font-size:24px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 24px;
     background: $white;
     color: $light-blue;
-    border-radius:10000px;
-    cursor:pointer;
-    position:absolute;
-    z-index:1;
+    border-radius: 10000px;
+    cursor: pointer;
+    position: absolute;
+    z-index: 1;
     right: -20px;
     top: -20px;
     border: 4px $light-blue-over solid;
@@ -19,39 +19,38 @@
 
 .auth-modal-tabs {
 
-    height:90px;
-    display:table;
-    width:100%;
+    height: 90px;
+    display: table;
+    width: 100%;
     max-width: 350px;
-    position:relative;
+    position: relative;
     table-layout: fixed;
 
     > .tab {
 
-        height:100%;
-        display:table-cell;
+        height: 100%;
+        display: table-cell;
         background: $light-blue;
         transition: background .3s;
-        text-align:center;
-        color:white;
-        cursor:pointer;
+        text-align: center;
+        color: white;
+        cursor: pointer;
         vertical-align: middle;
 
         > .tab-icon {
-            font-size:40px;
+            font-size: 40px;
         }
 
         @media (min-width: 370px) {
             > .tab-name {
-                font-size:12px;
+                font-size: 12px;
             }
         }
         @media (max-width: 370px) {
             > .tab-name {
-                font-size:11px;
+                font-size: 11px;
             }
         }
-
 
     }
 
@@ -67,15 +66,15 @@
 
 .auth-modal-content {
 
-    width:100%;
+    width: 100%;
     max-width: 350px;
     text-align: center;
 
     a.facebook-btn {
-        position:relative;
-        width:205px;
-        display:block;
-        margin:auto;
+        position: relative;
+        width: 205px;
+        display: block;
+        margin: auto;
         background: #4365ac;
         border-bottom: 2px solid #1C459C;
         border-radius: 3px;
@@ -97,7 +96,7 @@
     }
 
     input[type="submit"] {
-        width: 125px!important;
+        width: 125px !important;
     }
 
     a.forgotten-password {
@@ -107,42 +106,41 @@
         cursor: pointer;
     }
 
-    form{
+    form {
         margin: 0 15px 15px 15px;
     }
 
-    .divider{
+    .divider {
         width: 100%;
         height: 1px;
         background-color: lightgray;
         margin-bottom: 15px;
     }
 
-    .btn{
+    .btn {
         margin: 0 15px 0 15px;
     }
 
-    .error, .success{
+    .error, .success {
         display: block;
         margin: 15px 0;
     }
 
-    .error{
+    .error {
         color: red;
     }
 
-    .success{
+    .success {
         color: green;
     }
 
-
-    .loginBtn{
+    .loginBtn {
         margin-top: 0 !important;
     }
 }
 
 @media screen and (max-width: 500px) {
-    .auth-modal-content{
+    .auth-modal-content {
         width: 100%;
     }
 
@@ -153,5 +151,18 @@
 
     .auth-modal-tabs {
         width: 100%;
+    }
+}
+
+@media screen and (max-height: 600px) {
+    div.ReactModalPortal > div {
+        overflow: auto;
+    }
+    div.ReactModalPortal > div > div {
+        position: relative!important;
+        top: 60px!important;
+        margin: auto!important;
+        left: inherit!important;
+        transform: none !important;
     }
 }
